# splat-trainer

./: .gitignore  .gitmodules  deploy_workers.sh  environment-base.yml  environment.yml  environment_py10.yml  pyproject.toml  setup.py
foo/: events.out.tfevents.1707290537.cs24001kw.128444.0
splat_trainer/: __init__.py  camera_pose.py  checkpoint.py  data_types.py  dataset.py  image_scaler.py  logger.py  scheduler.py  splat-trainer.code-workspace  trainer.py  viewer.py
splat_trainer/camera_table/: __init__.py  camera_table.py  pose_table.py
splat_trainer/color_corrector/: __init__.py  bilateral_corrector.py  bilateral_grid.py  corrector.py  nil_corrector.py
splat_trainer/color_corrector/util/: lib_bilagrid.py
splat_trainer/config/: __init__.py  bayesian_optimize.yaml  config.yaml  config_multirun.yaml  grid_search.yaml  lab3.yaml  settings.py
splat_trainer/config/color_corrector/: bilateral.yaml  nil.yaml
splat_trainer/config/controller/: disabled.yaml  mcmc.yaml  noop.yaml  static.yaml  target.yaml  threshold.yaml
splat_trainer/config/dataset/: colmap.yaml  scan.yaml  taichi.yaml
splat_trainer/config/hydra/callbacks/: average_result.yaml  average_results.yaml  default.yaml  flush_db.yaml  log_best_result.yaml  log_job_result.yaml  manage_rq_workers.yaml  push_stats.yaml
splat_trainer/config/hydra/launcher/: custom_rq.yaml  ray_launcher.yaml  rq_launcher.yaml
splat_trainer/config/logger/: none.yaml  tensorboard.yaml  wandb.yaml
splat_trainer/config/multirun/: daily_multirun.yaml  grid_search.yaml  optuna.yaml
splat_trainer/config/multirun/conn/: default.yaml
splat_trainer/config/multirun/hosts/: all.yaml  test.yaml
splat_trainer/config/scene/: mlp.yaml  sh.yaml  tcnn.yaml
splat_trainer/config/test_datasets/: default.yaml
splat_trainer/config/trainer/: default.yaml
splat_trainer/config/view_selection/: overlap.yaml  random.yaml
splat_trainer/config/viewer/: nerfview.yaml  none.yaml  splatview.yaml
splat_trainer/controller/: __init__.py  controller.py  disabled.py  mcmc_controller.py  noop_controller.py  point_state.py  target_controller.py  threshold_controller.py
splat_trainer/dataset/: __init__.py  dataset.py  normalization.py  util.py
splat_trainer/dataset/colmap/: dataset.py  loading.py
splat_trainer/dataset/scan/: dataset.py  loading.py
splat_trainer/datasets/: __init__.py
splat_trainer/datasets/scan/: dataset.py  loading.py
splat_trainer/debug/: optim.py
splat_trainer/gaussians/: loading.py  split.py
splat_trainer/logger/: __init__.py  histogram.py  logger.py  tensorboard.py  wandb.py
splat_trainer/modules/: pose_table.py
splat_trainer/multirun/: average_result.py  average_results.py  deploy.py  flush_db.py  log_best_result.py  log_job_result.py  manage_rq_worker.py  push_stats.py  util.py
splat_trainer/multirun/config/: all.yaml  test.yaml
splat_trainer/multirun/scripts/: bayesian_optimize.py  daily_train.sh  grid_search.py  rq_worker_launcher.py  shutdown_all_workers.py  train_scan_multirun.py
splat_trainer/scan/: __init__.py  dataset.py  loading.py  visibility.py
splat_trainer/scene/: __init__.py  color_model.py  controller.py  ema_controller.py  gaussian_scene.py  gaussians.py  io.py  mlp_scene.py  point_statistics.py  scene.py  sh_scene.py  split.py  tcnn_scene.py  transfer_sh.py  util.py
splat_trainer/scene/mlp/: models.py  tcnn_mlp.py  torch_mlp.py
splat_trainer/scripts/: bayesian_optimize.py  benchmark.py  checkpoint.py  cluster_views.py  daily_train.sh  eval_pruning.py  evaluate.py  grid_search.py  render_image.py  rq_worker.py  rq_worker_launcher.py  shutdown_all_workers.py  test_split.py  to_colmap.py  train_gaussians.py  train_scan.py  train_scan_multirun.py  view_batching.py  view_clusters.py  view_model.py
splat_trainer/scripts/debug/: bench_tcnn.py  test_tcnn.py
splat_trainer/templates/: index.html
splat_trainer/trainer/: __init__.py  checkpoint.py  config.py  debug.py  evaluation.py  exception.py  init.py  loading.py  trainer.py  view_selection.py
splat_trainer/util/: average_result.py  callbacks.py  colorize.py  colors.py  config.py  containers.py  deploy.py  kmeans.py  lib_bilagrid.py  manage_rq_worker.py  misc.py  pointcloud.py  push_metrics.py  render_image.py  straight_through.py  transforms.py  view_cameras.py  visibility.py
splat_trainer/viewer/: __init__.py  logger.py  nerfview.py  splatview.py  viewer.py
splat_trainer/visibility/: cluster.py  query_points.py
util/: transforms.py
