[project]
name = "splat-trainer"  
version = "0.2.0"  
description = "Gaussian Splatting scene reconstruction with taichi-splatting"  
readme = "README.md" 
requires-python = ">=3.10"
license = {file = "LICENSE"}

maintainers = [
  {name = "Oliver Batchelor", email = "oliver.batchelor@canterbury.ac.nz" } 
]

dependencies = [
  'taichi-splatting >= 0.28.0',
  'tqdm',
  'plyfile',
  'pypcd4',

  'hydra-core',
  'omegaconf',
  'roma>=1.4',
  'tabulate',
  'fused-ssim',

  'python-dispatch',
  'markdown_strings',
  
  'opencv-python',
  'pycolmap',
  'scipy',
  'tensorboard',
  'wandb',
  'termcolor',
  'debugpy',
  'wonderwords',
  'splatview>=0.2.0',

  'tensordict >= 0.6.2',
  'pykeops'
]


[tool.setuptools.packages.find]
include = ["splat_trainer"]
exclude = ["profiles", "benchmarks"]


[project.urls] 
"Homepage" = "https://github.com/uc-vision/splat-trainer"

[build-system]
requires = ["setuptools>=43.0.0",  "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[options]
dependency_links = ["https://pypi.taichi.graphics/simple/"]

[project.scripts]  # Optional
splat-trainer = "splat_trainer.scripts.train_scan:main"
to-colmap = "splat_trainer.scripts.to_colmap:main"

grid-search-trainer = "splat_trainer.scripts.grid_search:main"

checkpoint-evaluate = "splat_trainer.scripts.checkpoint:evaluate"
checkpoint-resume = "splat_trainer.scripts.checkpoint:resume"
checkpoint-visualize = "splat_trainer.scripts.checkpoint:visualize"
checkpoint-write-sh = "splat_trainer.scripts.checkpoint:write_sh_gaussians"

checkpoint-show-batch = "splat_trainer.scripts.view_batching:main"
checkpoint-benchmark = "splat_trainer.scripts.benchmark:main"
checkpoint-view-clusters = "splat_trainer.scripts.view_clusters:main"


[tool.setuptools.package-data]

[tool.pyright]
reportInvalidTypeForm = "none"
reportGeneralTypeIssues = "none"
# typeCheckingMode = "off"


[tool.ruff]
indent-width = 2

[tool.pytest.ini_options]
filterwarnings = [
    # disable "UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor"
    "ignore::UserWarning"  
]
