[project]
name = "splat-trainer"  
version = "0.2.0"  
description = "Gaussian Splatting scene reconstruction with taichi-splatting"  
readme = "README.md" 
requires-python = ">=3.10"
license = {file = "LICENSE"}

maintainers = [
  {name = "Oliver Batchelor", email = "oliver.batchelor@canterbury.ac.nz" } 
]

dependencies = [
  'taichi-splatting >= 0.26.0',
  'tqdm',
  'plyfile',
  'pypcd4',
  'hydra-core',
  'omegaconf',
  'roma>=1.4',
  'tabulate',
  'torchmetrics',
  'fused-ssim',
  'opencv-python',
  'pycolmap',
  'scipy',
  'tensorboard',
  'wandb',
  'termcolor',
  'debugpy',
  'wonderwords'
#  'tinycudann @ git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch'
]


[tool.setuptools.packages.find]
include = ["splat_trainer"]
exclude = ["profiles", "benchmarks"]


[project.urls] 
"Homepage" = "https://github.com/uc-vision/splat-trainer"

[build-system]
requires = ["setuptools>=43.0.0",  "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[options]
dependency_links = ["https://pypi.taichi.graphics/simple/"]

[project.scripts]  # Optional
splat-trainer = "splat_trainer.scripts.train_scan:main"
to-colmap = "splat_trainer.scripts.to_colmap:main"
evaluate-trainer = "splat_trainer.scripts.evaluate:evaluate"
resume-trainer = "splat_trainer.scripts.evaluate:resume"

grid-search-trainer = "splat_trainer.multirun.scripts.grid_search:main"
bayesian-optimize-trainer = "splat_trainer.multirun.scripts.bayesian_optimize:main"
rq-worker-launcher = "splat_trainer.multirun.scripts.rq_worker_launcher:main"
shutdown-workers = "splat_trainer.multirun.scripts.shutdown_all_workers:main"

[tool.setuptools.package-data]

[tool.pyright]
reportInvalidTypeForm = "none"

[tool.ruff]
indent-width = 2

[tool.pytest.ini_options]
filterwarnings = [
    # disable "UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor"
    "ignore::UserWarning"  
]

